matlab: Add indeterminant points in computation of G(R)
Improves numerical stability of bisection search.

--- a/tex/RSS2017_PressPull.tex
+++ b/tex/RSS2017_PressPull.tex
@@ -586,6 +586,14 @@ velocity. Let $\omega_u$ be the upper bound on the angular velocity.
 
 \subsection{Center of Pressure Bounds}\label{sec:cop-bounds}
 
+\section{Experiments}
+
+\subsection{Exact Bounds vs Peshkin's Bound}
+\begin{enumerate}
+\item MIT Dataset objects' aspect ratios are lacking.
+\item Alexander and Maddock omitted because...
+\end{enumerate}
+
 \bibliographystyle{plainnat}
 \bibliography{references}
 
