--- a/tex/references.bib
+++ b/tex/references.bib
@@ -65,3 +65,13 @@
   year={1993},
   publisher={Sage Publications}
 }
+@article{peshkin1988motion,
+  title={The motion of a pushed, sliding workpiece},
+  author={Peshkin, Michael A and Sanderson, Arthur C},
+  journal={IEEE Journal on Robotics and Automation},
+  volume={4},
+  number={6},
+  pages={569--598},
+  year={1988},
+  publisher={IEEE}
+}
