matlab: Autogenerate dynamics v1

--- a/tex/RSS2017_PressPull.tex
+++ b/tex/RSS2017_PressPull.tex
@@ -756,7 +756,7 @@ constant unit velocity.
   velocity function to compute the amount of time required to reach a
   particular orientation. However, we can also apply separation of
   variables to the function $\omega$. Observe that because $\alpha$ is
-  an upper bound
+  an upper bound on $\omega$
   \begin{equation} 
     \alpha(x - \phi(t_0)) \geq \omega(x - \phi(t_0)),
   \end{equation}
