--- a/tex/references.bib
+++ b/tex/references.bib
@@ -75,3 +75,9 @@
   year={1988},
   publisher={IEEE}
 }
+@misc{gurobi,
+   author = "Gurobi Optimization, Inc.",
+   title = "Gurobi Optimizer Reference Manual",
+   year = 2016,
+   url = "http://www.gurobi.com"
+}
