--- a/tex/references.bib
+++ b/tex/references.bib
@@ -81,3 +81,13 @@
    year = 2016,
    url = "http://www.gurobi.com"
 }
+@article{lynch1995pulling,
+  title={Pulling by pushing, slip with infinite friction, and perfectly rough surfaces},
+  author={Lynch, Kevin M and Mason, Matthew T},
+  journal={The International journal of robotics research},
+  volume={14},
+  number={2},
+  pages={174--183},
+  year={1995},
+  publisher={Sage Publications Sage CA: Thousand Oaks, CA}
+}
