tex: Change wording in introduction

--- a/tex/RSS2017_PressPull.tex
+++ b/tex/RSS2017_PressPull.tex
@@ -187,8 +187,8 @@ The overall contribution of this paper is the theoretical and
 practical formulation of pulling as a primitive action for positioning
 and orienting objects under uncertainty. The crowning achievement of
 our approach is that, even during open-loop control, the system
-uncertainty remains input-output (Lyapunov) stable. Next, we highlight
-the results that enable us to create our primitive action planner for
+uncertainty (error) remains Lyapunov stable. Next, we highlight the
+results that enable us to create our primitive action planner for
 pulling.
 
 The insight that motivated this work was our recognition, and
